--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node scripts/dev.js reactivity -f esm"
+    "dev": "node scripts/dev.js runtime-dom -f esm"
   },
   "keywords": [],
   "author": "",
